# teoria

Ambienti_VIrtuali/: venv.ipynb
Ambienti_Virtuali/: README.md  cheatsheet.md  command.md
Pytest/: README.md  cheatsheet.md  commands.md  pytest.ipynb  pytest_quickref.md
logging/: logger_utils.py  logging.ipynb  readme.md
logging/installation/setup_logger/: pyproject.toml  readme.md
logging/installation/setup_logger_pip/: pyproject.toml  readme.md
logging/installation/setup_logger_pip/setup_logger_pip/: logger.py
logging/installation/setup_logger_yaml/: logging_config.yaml  pyproject.toml  readme.md
logging/setup_logger/: README.md  pyproject.toml  readme.md  📄 pyproject.toml
logging/setup_logger/setup_logger/: yaml_logger.py
