[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-logging"
version = "0.1.0"
description = "Logger utility"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Tuo Nome", email="tuo@email.it"}]
license = {text = "MIT"}

#[project.urls]
#Homepage =
