[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "setuo_logger_yaml
version = "0.1.0"
description = "Logger utility"
readme = "readme.md"
requires-python = ">=3.10"
authors = [{name="Federico Gamberini", email="federico.gamberini.fg@gmail.com"}]
license = {text = "MIT"}

#[project.urls]
#Homepage = "https://example.com"
